# web_nuxt/openapi.yaml
@@ -21,6 +21,24 @@ components:
       $ref: '../schemas/Token.json'
 
 paths:
+/route/anketa/api/json:
+    get:
+      summary: Получение успешного сообщения
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Успешный запрос
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message: {
+                    type: string
+                  }
+              examples: { "message": "success" }
+
   /route/anketa/api/json:
     post:
       summary: Получение анкеты из JSON
@@ -49,7 +67,7 @@ paths:
           description: Некорректный запрос
           content:
             application/json:
-            schema:
+              schema:
                 type: object
                 properties:
                   message: {
